gitops/manifests/argocd-gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-httproute
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  parentRefs:
  - name: argocd-gateway
    namespace: argocd
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
      filters: []
